--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,11 +6,15 @@
 </head>
 <body>
   <div class="header-bar">Dairy Fresh Management</div>
-  <h1>Welcome to Dairy Fresh</h1>
-  <p>Manage and order fresh dairy products easily.</p>
-  <div style="margin-top: 30px;">
-    <a href="login.html"><button class="btn">Login</button></a>
-    <a href="register.html"><button class="btn">Register</button></a>
+  <div style="display: flex; align-items: center; justify-content: center; min-height: 70vh; width: 100vw;">
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; width: 100%; max-width: 480px;">
+      <h1 style="margin-bottom: 18px; text-align: center;">Welcome to Dairy Fresh</h1>
+      <p style="font-size: 1.15rem; margin-bottom: 32px; color: #444; text-align: center;">Manage and order fresh dairy products easily.</p>
+      <div style="display: flex; gap: 18px; margin-top: 10px; justify-content: center; width: 100%;">
+        <a href="login.html"><button class="btn" style="min-width: 120px;">Login</button></a>
+        <a href="register.html"><button class="btn" style="min-width: 120px;">Register</button></a>
+      </div>
+    </div>
   </div>
 </body>
 </html>
