--- a/frontend/login.html
+++ b/frontend/login.html
@@ -6,14 +6,16 @@
 </head>
 <body>
   <div class="header-bar">Dairy Fresh Management</div>
-  <h2>Login</h2>
-  <form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required /><br />
-    <input type="password" id="password" placeholder="Password" required /><br />
-    <button type="submit" class="btn">Login</button>
-    <div class="form-feedback" id="loginFeedback"></div>
-  </form>
-  <p>Don't have an account? <a href="register.html">Register here</a>.</p>
+  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 60vh;">
+    <h2 style="margin-bottom: 10px;">Login</h2>
+    <form id="loginForm" style="width: 100%; max-width: 400px;">
+      <input type="email" id="email" placeholder="Email" required />
+      <input type="password" id="password" placeholder="Password" required />
+      <button type="submit" class="btn" style="width: 100%; margin-top: 10px;">Login</button>
+      <div class="form-feedback" id="loginFeedback"></div>
+    </form>
+    <p style="margin-top: 18px;">Don't have an account? <a href="register.html">Register here</a>.</p>
+  </div>
   <script>
     document.getElementById("loginForm").addEventListener("submit", async function(e) {
       e.preventDefault();
