--- a/frontend/user/home.html
+++ b/frontend/user/home.html
@@ -15,10 +15,15 @@
       <button id="logoutBtn" class="btn">Logout</button>
     </div>
   </div>
-  <h1>Welcome to Dairy Fresh</h1>
-  <h2>Available Products</h2>
-  <div id="product-list"></div>
+  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; min-height: 60vh; width: 100vw;">
+    <h1 style="text-align: center; margin-bottom: 10px;">Welcome to Dairy Fresh</h1>
+    <h2 style="text-align: center; margin-bottom: 18px;">Available Products</h2>
+    <div id="product-list" style="display: flex; flex-wrap: wrap; justify-content: center; width: 100%;"></div>
+  </div>
   <script type="module">
+    window.addEventListener("pageshow", function(event) {
+      if (event.persisted) window.location.reload();
+    });
     import { qs, ce, formatPrice } from "../js/utils.js";
     import { getUserSession, clearSession } from "../js/auth.js";
     // Show username
